--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 /* Make the image fully responsive */
 .carousel-inner img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -17,6 +17,13 @@ body {
   background-size: cover;
 }
 
+#header-main-title {
+  text-align: center;
+  color: #ffff00;
+  font-size: 30px;
+}
+
+/*
 .header {
   text-align: center;
   padding: 32px;
@@ -24,6 +31,7 @@ body {
   padding-bottom: 20px;
   color: #ffff00;
 }
+*/
 
 .header h1 {
   font-size: 60px;
@@ -62,6 +70,9 @@ body {
     flex: 50%;
     max-width: 50%;
   }
+  #header-main-title {
+    font-size: 20px;
+  }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -70,6 +81,9 @@ body {
     -ms-flex: 100%;
     flex: 100%;
     max-width: 100%;
+  }
+  #header-main-title {
+    font-size: 18px;
   }
 }
 
@@ -84,4 +98,19 @@ img#logo {
   padding-bottom: 20px;
   background-color: #ffffff;
   opacity: 0.85;
+}
+
+.nav-link{
+  font-size: 1.1em;
+}
+
+.nav-link:hover {
+  border-bottom: #ffff00;
+  border-width: 2px;
+  border-bottom-style: solid;
+} 
+
+#footer {
+  color: #ffffff;
+  font-size: 1em;
 }
